fixed min height jumpo part 2

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -79,7 +79,7 @@ footer {
 header {
   background-image: url(../img/jumbo.png);
   background-size: cover;
-  min-height: 1000px;
+  min-height: 800px;
 }
 
 .hero {
